data/derived/sp14/progs/unify/prog3541.ml.out
Characters 136-140:
  let halff = rand(0,2) in
              ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
